package com.mycompany.proyectointegrador.modelo;

public enum Especialidad {
    ODONTOLOGÍA,
    OFTALMOLOGÍA,
    PEDIATRÍA,
    DERMATOLOGÍA,
    UROLOGÍA,
    ONCOLOGÍA,
    CARDIOLOGÍA,
    CLINICA_GENERAL,
}
