package com.mycompany.proyectointegrador.modelo;

public enum EstadoTurno {
    PENDIENTE,
    CONFIRMADO,
    INICIALIZADO,
    REALIZADO,
    CANCELADO,
    AUSENTE,
}
